Style the Website header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <div class="nav">
-            <img src="./img/HTML5-Logo" alt="The HTML5 Logo from W3">
+            <p class="header-logo">Header Logo</p>
             <nav>
                 <a href="">header link one</a>
                 <a href="">header link two</a>
@@ -20,11 +20,11 @@
         <div class="header-content">
             <div class="header-content-left">
                 <h1>This website is awesome</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nibh urna, laoreet ut vehicula suscipit, commodo vitae arcu. Vestibulum lobortis ut diam sit amet dapibus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <button type="button" class="header-button">Sign Up</button>
             </div>
             <div class="header-content-right">
-                <img src="" class="header-image" alt="This is a placeholder for an image"
+                <img src="./img/placeholder1.jpg" class="placeholder1" alt="This is a placeholder image">
             </div>
         </div>
     </section>
