Create first content section of the website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
                 <button type="button" class="header-button">Sign Up</button>
             </div>
             <div class="header-content-right">
-                <img src="./img/placeholder1.jpg" class="placeholder1" alt="This is a placeholder image">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </section>
+    <section class="content1">
+        <h2>Some random information</h2>
+        <div class="boxes">
+            <div class="box1">
+                <div class="box1-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box2">
+                <div class="box2-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box3">
+                <div class="box3-img"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="box4">
+                <div class="box4-img"></div>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </section>
