Create second content section of the website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Landing Page Template</title>
 </head>
 <body>
-    <section class="header">
+    <header class="header">
         <div class="nav">
             <p class="header-logo">Header Logo</p>
             <nav>
@@ -27,7 +27,7 @@
                 <p>this is a placeholder for an image</p>
             </div>
         </div>
-    </section>
+    </header>
     <section class="content1">
         <h2>Some random information</h2>
         <div class="boxes">
@@ -48,6 +48,14 @@
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
+    </section>
+    <section class="content2">
+        <div class="quote-box">
+         <div class="quote">
+            <p class="quote-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at turpis quis urna ullamcorper ornare vel sit amet velit. Sed sollicitudin, risus a ornare tempus, ligula felis interdum mauris, quis porta neque ipsum sagittis eros</p>
+            <p class="quote-author">- Lorem ipsum dolor</p>
+         </div>
+        </div> 
     </section>
 </body>
 </html>
