--- a/index.html
+++ b/index.html
@@ -57,5 +57,14 @@
          </div>
         </div> 
     </section>
+    <section class="content3">
+        <div class="sign-up-box">
+            <div class="text-action">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <button type="button">Sign up</button>
+        </div>
+    </section>
 </body>
 </html>
