--- a/index.html
+++ b/index.html
@@ -66,5 +66,8 @@
             <button type="button">Sign up</button>
         </div>
     </section>
+    <footer>
+        <p>Copyright © The Odin Project 2023</p>
+    </footer>
 </body>
 </html>
